# secure_update-rs

./: .gitignore  Makefile  uuid.txt
host/: Cargo.toml  Makefile
host/src/: main.rs
proto/: Cargo.toml
proto/src/: lib.rs
server/: Cargo.toml  Makefile
server/src/: main.rs
ta/: Cargo.toml  Makefile  build.rs
ta/src/: main.rs
